salesforce-metadata/force-app/main/default/objects/Release_Batch__c/Release_Batch__c.object-meta.xml
<CustomObject>
    <description>Groups multiple changes into one deployment</description>
    <label>Release Batch</label>
    <nameField>
        <label>Release Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releas batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>