salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Batch_name__c.field-meta.xml
<CustomField>
    <fullName>Batch_name__c</fullName>
    <label>Batch_name__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>