salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Batch_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Batch_Risk_Level__c</fullName>
    <label>Batch Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>