salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Deployed_To_Production__c.field-meta.xml
<CustomField>
    <fullName>Deployed_To_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployed To Production</label>
    <type>Checkbox</type>
</CustomField>