salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Deployment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Notes__c</fullName>
    <label>Deployment Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>