salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Deployment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Plan__c</fullName>
    <label>Deployment Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>