salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Deployment_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Readiness__c</fullName>
    <label>Deployment Readiness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>