salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Deployment_Safety__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Safety__c</fullName>
    <label>Deployment Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAFE</fullName>
            </value>
            <value>
                <fullName>RISKY</fullName>
            </value>
            <value>
                <fullName>BLOCKED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>