salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Estimated_Deployment_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Deployment_Time__c</fullName>
    <label>Estimated Deployment Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>