salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Missing_Components__c.field-meta.xml
<CustomField>
    <fullName>Missing_Components__c</fullName>
    <label>Missing Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>