salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Planned_Deployment_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Planned_Deployment_Date_c__c</fullName>
    <label>Planned_Deployment_Date__c</label>
    <type>Date</type>
</CustomField>