salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/release_status_c__c.field-meta.xml
<CustomField>
    <fullName>release_status_c__c</fullName>
    <label>release_status__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Ready To Deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>