salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <label>Source Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>