salesforce-metadata/force-app/main/default/objects/Release_Batch__c/fields/Target_environment_c__c.field-meta.xml
<CustomField>
    <fullName>Target_environment_c__c</fullName>
    <label>Target_environment__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Pre-Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>