salesforce-metadata/force-app/main/default/objects/Release_Batch__c/validationRules/Block_Production_Deploy_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Production_Deploy_Without_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Deployed_To_Production__c = TRUE,
OR(
NOT(ISPICKVAL(Approval_Status__c , &quot;Approved&quot;)),
Deployed_To_Sandbox__c = FALSE
)
)</errorConditionFormula>
    <errorMessage>Production deployment allowed only after sandbox testing and approval.</errorMessage>
</ValidationRule>