salesforce-metadata/force-app/main/default/objects/Release_Batch__c/validationRules/Lock_After_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_After_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Approval_Status__c , &quot;Approved&quot;),
OR(
ISCHANGED(Target_environment_c__c ),
ISCHANGED(Planned_Deployment_Date_c__c ),
ISCHANGED(Batch_name__c)
)
)</errorConditionFormula>
    <errorMessage>Approved Releas Batches cannot be modified</errorMessage>
</ValidationRule>