salesforce-metadata/force-app/main/default/objects/Release_Batch__c/listViews/Release_Managers_Release_Batch.listView-meta.xml
<ListView>
    <fullName>Release_Managers_Release_Batch</fullName>
    <filterScope>Queue</filterScope>
    <label>Release Managers</label>
    <queue>Release_Managers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>